# neuralnetwork

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Log.h  Makefile  README.md  brain.cpp  brain.h  cifar10_reader.h  config_reader.cpp  config_reader.h  data_holder.cpp  data_holder.h  log.h  main.cpp  neural_network.cpp  neural_network.h  neuralnetwork  neuralnetwork.h  neurals.h  neuron.cpp  neuron.h  synapse.cpp  synapse.h  utilities.cpp  utilities.h
neural_data/: config.json
